--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "assert": "^1.4.1",
+    "bcrypt": "^1.0.3",
     "body-parser": "~1.17.1",
     "connect": "^3.6.5",
     "connect-flash": "^0.1.1",
@@ -21,6 +22,7 @@
     "flash": "^1.1.0",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.0.1",
+    "moment": "^2.18.1",
     "mongoose": "^4.11.13",
     "morgan": "~1.8.1",
     "mpromise": "^0.5.5",
